--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analysis(run, machine, path=None):\n",
+    "def analysis(run, machine, path):\n",
     "    # Path to the file\n",
-    "    file_path = f\"log_hist/logs_{run}/machine_{machine}_log.txt\"\n",
-    "\n",
-    "    if path:\n",
-    "        file_path = f\"log_hist/{path}/machine_{machine}_log.txt\"\n",
-    "\n",
+    "    file_path = f\"log_hist/{path}/logs_{run}/machine_{machine}_log.txt\"\n",
     "\n",
     "    logical_clock_values = []\n",
     "    pattern = re.compile(r\"LogicalClock=(\\d+)\")\n",
@@ -34,8 +30,11 @@
     "            if match:\n",
     "                logical_clock_values.append(int(match.group(1)))\n",
     "        file.seek(0)\n",
-    "        first_line = file.readline()\n",
-    "        clock_rate_match = re.search(r'Clock rate=(\\d+)', first_line)\n",
+    "        for _ in range(2):\n",
+    "            file.readline()\n",
+    "        third_line = file.readline()\n",
+    "        clock_rate_match = re.search(r'Clock rate=(\\d+)', third_line)\n",
+    "        # clock_rate_match = re.search(r'Clock rate=(\\d+)', first_line)\n",
     "        clock_rate = int(clock_rate_match.group(1)) if clock_rate_match else None\n",
     "\n",
     "    step_sizes = [logical_clock_values[i+1] - logical_clock_values[i] for i in range(len(logical_clock_values)-1)]\n",
@@ -45,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -53,29 +52,29 @@
      "output_type": "stream",
      "text": [
       "Run 1:\n",
-      "Clock rates: [3, 4, 1]\n",
-      "Max clocks: [236, 236, 184]\n",
-      "Average step sizes: [1.33, 1.0, 3.1]\n",
+      "Clock rates: [1, 2, 1]\n",
+      "Max clocks: [118, 120, 113]\n",
+      "Average step sizes: [1.98, 1.0, 1.9]\n",
       "\n",
       "Run 2:\n",
-      "Clock rates: [5, 3, 6]\n",
-      "Max clocks: [351, 349, 351]\n",
-      "Average step sizes: [1.19, 1.97, 1.0]\n",
+      "Clock rates: [2, 1, 1]\n",
+      "Max clocks: [119, 118, 117]\n",
+      "Average step sizes: [1.0, 1.98, 1.97]\n",
       "\n",
       "Run 3:\n",
-      "Clock rates: [1, 3, 4]\n",
-      "Max clocks: [163, 233, 236]\n",
-      "Average step sizes: [2.75, 1.31, 1.0]\n",
+      "Clock rates: [2, 1, 2]\n",
+      "Max clocks: [119, 115, 119]\n",
+      "Average step sizes: [1.0, 1.93, 1.0]\n",
       "\n",
       "Run 4:\n",
-      "Clock rates: [5, 3, 2]\n",
-      "Max clocks: [294, 291, 286]\n",
-      "Average step sizes: [1.0, 1.64, 2.42]\n",
+      "Clock rates: [2, 1, 2]\n",
+      "Max clocks: [119, 116, 119]\n",
+      "Average step sizes: [1.0, 1.95, 1.0]\n",
       "\n",
       "Run 5:\n",
-      "Clock rates: [6, 2, 4]\n",
-      "Max clocks: [351, 334, 348]\n",
-      "Average step sizes: [1.0, 2.82, 1.48]\n",
+      "Clock rates: [2, 2, 2]\n",
+      "Max clocks: [119, 119, 119]\n",
+      "Average step sizes: [1.0, 1.0, 1.0]\n",
       "\n"
      ]
     }
@@ -84,7 +83,7 @@
     "for run in range(1, 6):\n",
     "    clock_rates, max_clocks, avg_step_sizes = [], [], []\n",
     "    for machine in range(1, 4):\n",
-    "        clock_rate, max_clock, avg_step_size = analysis(run, machine)\n",
+    "        clock_rate, max_clock, avg_step_size = analysis(run, machine, \"logs_lower_clock_vari\")\n",
     "        clock_rates.append(clock_rate)\n",
     "        max_clocks.append(max_clock)\n",
     "        avg_step_sizes.append(avg_step_size)\n",
@@ -182,7 +181,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -196,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
